Removed one asset with layout issues

--- a/my-app/src/Styles/Final.css
+++ b/my-app/src/Styles/Final.css
@@ -117,6 +117,6 @@ background-size: cover;
     background-size: cover;
 }
 .slide4{
-    background-image: url('../assets/moojy1.jpg');
+    background-image: url('../assets/moojy2.jpg');
     background-size:cover ;
 }
